Tue Jul 27 16:05:52 1999  David Edelsohn  <edelsohn@gnu.org>

	* aix43.h (ASM_CPU_SPEC, CPP_CPU_SPEC): Add rs64a and PPC630.
	* rs6000.c (processor_target_table): Add powerpc64, rs64a, and PPC630.
	(rs6000_cpu): Choose between 32-bit and 64-bit default processors.
	(secndary_reload_class): Make TARGET_ELF conditional compile.
	(print_operand_address): Similar.
	(output_toc): Print all values as hex.
	(get_issue_rate): Rearrange and add RS64A and PPC630.
	* rs6000.h (processor_type): Add RS64A and PPC630.
	(PROCESSOR_POWERPC64): New.
	(PROMOTE_MODE): Use word_mode.
	(RTX_COSTS): Add RS64A and PPC630.
	* rs6000.md (scheduling information): Add lmul and ldiv
	representing 64-bit integer multiply and divide.  Add rs64a and
	PPC630 information.
	(ashldi3): Add support for "rldic" instruction.
	* sysv4.h (PROCESSOR_DEFAULT): Change to PROCESSOR_750.
	
Tue Jul 27 15:31:53 1999  Vladimir Makarov  <vmakarov@toad.to.cygnus.com>

	* config/sparc/sparc.c (sparc_override_options): Enable SPARCLITE
	instead of V8 for sparclite86x in cpu_table.

Tue Jul 27 17:49:42 1999  Bernd Schmidt  <bernds@cygnus.co.uk>

	* config/arm/coff.h (ASM_FILE_START): If generating SDB output, call
	output_file_directive.

Tue Jul 27 03:15:33 1999  Jason Merrill  <jason@yorick.cygnus.com>

	* expr.c (expand_expr, case PLUS_EXPR): Get the mode from the 
	tree for op1, not the rtl.

Tue Jul 27 00:18:34 1999  Richard Henderson  <rth@cygnus.com>

	* m88k.c (m88k_builtin_saveregs): Break out the constructor code
	to m88k_va_start, leaving only the register spill.
	(m88k_build_va_list): New.
	(m88k_va_start): New.
	(m88k_va_arg): New.
	* m88k.h (BUILD_VA_LIST_TYPE): New.
	(EXPAND_BUILTIN_VA_START): New.
	(EXPAND_BUILTIN_VA_ARG): New.

Mon Jul 26 19:07:11 1999  Geoff Keating  <geoffk@cygnus.com>

	* config/rs6000/rs6000.c (rs6000_expand_builtin_saveregs):
	Rename from expand_builtin_saveregs.
	* config/rs6000/rs6000.h (EXPAND_BUILTIN_SAVEREGS): Change caller.
